force-app/main/default/objects/Case/fields/How_can_we_help__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_help__c</fullName>
    <label>How can we help?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>