force-app/main/default/objects/Case/fields/mercury__Owner_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>mercury__Owner_Mobile_Phone__c</fullName>
    <description>Used to access Case Owner Mobile Phone as not directly available.</description>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mobile Phone</label>
    <type>Text</type>
</CustomField>