force-app/main/default/objects/Case/fields/mercury__SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Opt_Out__c</fullName>
    <formula>IF(ContactId != null, Contact.mercury__SMS_Opt_Out__c, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>