force-app/main/default/objects/Case/fields/Referrer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Rating__c</fullName>
    <formula>TEXT(Contact.Referrer_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Rating</label>
    <type>Text</type>
</CustomField>