force-app/main/default/objects/Case/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <formula>Source:EmailMessage.ToAddress</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToAddress</label>
    <type>Text</type>
</CustomField>