force-app/main/default/objects/Case/listViews/All_Active_Cases.listView-meta.xml
<ListView>
    <fullName>All_Active_Cases</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>Referrer_Rating__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold,Escalated,New,Open</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>Mortgage Cases</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notContain</operation>
        <value>@communityfirst.com.au,mortgageapplications</value>
    </filters>
    <filters>
        <field>ToAddress__c</field>
        <operation>notEqual</operation>
        <value>mortgageapplications@parkerlane.com.au,keely.chapman@parkerlane.com.au</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notContain</operation>
        <value>applyonline.com.au,corelogic.com.au,travis.tombs,keely.chapman</value>
    </filters>
    <label>Personal Lending Dashboard</label>
</ListView>