force-app/main/default/objects/Case/listViews/Bank_Statements.listView-meta.xml
<ListView>
    <fullName>Bank_Statements</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Bank Statements</label>
</ListView>