force-app/main/default/objects/Case/listViews/CFCU.listView-meta.xml
<ListView>
    <fullName>CFCU</fullName>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>contains</operation>
        <value>@communityfirst.com.au</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Solved,Spam</value>
    </filters>
    <label>CFCU</label>
</ListView>