force-app/main/default/objects/Case/listViews/Chat_Offline_Support_Case.listView-meta.xml
<ListView>
    <fullName>Chat_Offline_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat Offline Support</label>
    <queue>Chat_Offline_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>