force-app/main/default/objects/Case/listViews/Copy_of_All_Cases.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Cases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Referrer_Rating__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Solved,Spam</value>
    </filters>
    <label>All Unsolved Cases</label>
</ListView>