force-app/main/default/objects/Case/listViews/Gold_Referrers_Case.listView-meta.xml
<ListView>
    <fullName>Gold_Referrers_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Gold Referrers</label>
    <queue>Gold_Referrers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>