force-app/main/default/objects/Case/listViews/Mortgage.listView-meta.xml
<ListView>
    <fullName>Mortgage</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Mortgage cases</value>
    </filters>
    <label>Mortgage</label>
    <sharedTo>
        <group>MortgageGroup</group>
    </sharedTo>
</ListView>