force-app/main/default/objects/Case/listViews/Mortgage_Lending_Dashboard.listView-meta.xml
<ListView>
    <fullName>Mortgage_Lending_Dashboard</fullName>
    <booleanFilter>1 AND 5 AND 6 AND (2 OR 3 OR 4 OR 7)</booleanFilter>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold,Escalated,New,Open</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Mortgage Cases</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>contains</operation>
        <value>@corelogic.com.au,applyonline.com.au,mortgageapplications</value>
    </filters>
    <filters>
        <field>ToAddress__c</field>
        <operation>equals</operation>
        <value>mortgageapplications@parkerlane.com.au,keely.chapman@parkerlane.com.au</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>personalapplications@parkerlane.com.au</value>
    </filters>
    <filters>
        <field>ToAddress__c</field>
        <operation>notEqual</operation>
        <value>personalapplications@parkerlane.com.au</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>equals</operation>
        <value>keely.chapman@parkerlane.com.au,travis.tombs@parkerlane.com.au</value>
    </filters>
    <label>Mortgage Lending Dashboard</label>
</ListView>