force-app/main/default/objects/Case/listViews/Other_Referrers_Case.listView-meta.xml
<ListView>
    <fullName>Other_Referrers_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Other Referrers</label>
    <queue>Other_Referrers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>