force-app/main/default/objects/Case/listViews/Personal.listView-meta.xml
<ListView>
    <fullName>Personal</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>Personal Loan,Debt Consolidation,Green Loan,Home Improvement,Vehicle Purchase</value>
    </filters>
    <label>Personal lending</label>
    <sharedTo>
        <group>PersonalGroup</group>
    </sharedTo>
</ListView>