force-app/main/default/objects/Case/listViews/Platinum_Referrers_Case.listView-meta.xml
<ListView>
    <fullName>Platinum_Referrers_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Platinum Referrers</label>
    <queue>Platinum_Referrers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>