force-app/main/default/objects/Case/listViews/Referrers.listView-meta.xml
<ListView>
    <fullName>Referrers</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Record_Type__c</field>
        <operation>contains</operation>
        <value>Referrer</value>
    </filters>
    <label>Referrers</label>
</ListView>